--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h5 class="my-3"><marquee>Javascript , Html - Calculator !</marquee></h5>
+    <h5 class="my-3"><marquee>Javascript , Html - Calculator </marquee></h5>
     <div class="grid-container">
         <div> <input type="email" class="form-control" id="input" placeholder="Enter no"></div>
         <div><button type="button" class="btn btn-primary">1</button></div>
